2007-09-01  Inge Wallin  <inge@lysator.liu.se>

	Krazy issue 3: contractions in strings
	* src/lib/MarbleModel.cpp (MarbleModel): couldn't -> could not
	* src/lib/GeoPolygon.cpp (load): can't -> cannot
	* src/lib/TileCreator.cpp (createTiles): doesn't -> does not
	* tools/dateline/dateline.cpp (main): doesn't -> does not

	Get rid of large and annoying status message while configuring
	* src/lib/CMakeLists.txt: Remove status messages

	Make projection choice clearer to the user
	* src/lib/MarbleControlBox.ui: "Map" -> "Flat Map"

2007-08-30  Torsten Rahn  <rahn@kde.org>
	Larger commit of issues that came up while 
	waiting for KDE4 Beta2:

	* src/lib/gps/TrackSegment.cpp:
	* src/lib/MarbleModel.cpp:
	- OpenSolaris fixes by Stefan Telemann

	* src/QtMainWindow.cpp:
	* src/lib/global.h:
	
	* src/lib/MarbleWidgetPopupMenu.h:
	* src/lib/MarbleWidgetPopupMenu.cpp:
	- Disable "Remove all Measure points" 
	  menu item if there hasn't been any 
	  measure point added yet.

	* src/lib/MarbleControlBox.cpp:
	- Enable flat projection

	* src/lib/CMakeLists.txt:
	* src/CMakeLists.txt:
	- Removing obsolete and broken ui file install as
	reported by Ferdinand Gassauer. 

	* marble.nsi:
	- Fix by Christian Ehrlicher for Windows Build.

	* src/lib/XmlHandler.cpp:
	* data/bitmaps/volcano_1.png:
	* data/bitmaps/mountain_1.png:
	* data/CMakeLists.txt:
	* src/lib/PlaceMarkPainter.cpp:
	* src/lib/PlaceMark.cpp:
	- Fixes for known issue "KML files don't display
	at low zoom"

	* debian:
	- Remove Debian directory on request of the debian packager

2007-08-29  Murad Tagirov  <tmurad@gmail.com>

    Implemented parsing of icons. Currently support only
    "file://" url scheme. Use MarbleDirs to locate icon.
    * src/lib/kml/KMLIconStyleParser.{h,cpp}
    * docs/projects/kml/KMLClasses.xmi

2007-08-27  Torsten Rahn  <rahn@kde.org>
	* src/lib/MarbleWidget.{h,cpp}:
	* src/lib/MarbleControlBox.{h,cpp}:
	If FLATPROJ_GSOC is defined then enable
	switching between projections ...
